--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "core-js": "^3.29.0",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
